# CppTemplate

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: third-party.cmake
cmake/detail/: benchmark.cmake
src/: CMakeLists.txt
src/concurrency/: CMakeLists.txt
src/concurrency/test/: DemoBenchmark.cpp  DemoTest.cpp
